--- a/public/css/style.css
+++ b/public/css/style.css
@@ -96,6 +96,7 @@ body{
 }
 
 .logout a {
+    position: sticky;
     text-decoration: none;
     border-radius: 50px;
     font-weight: 500;
@@ -243,6 +244,11 @@ body{
 
 /* comments */
 
+.comments_container{
+    overflow-y: scroll;
+    height: 80vh;
+}
+
 .comments_container .row{
     background-color: white;
     padding: 2rem 1rem;
@@ -250,7 +256,8 @@ body{
     width: 50%;
 }
 
-.comments_container .comment_send{
+.container .comment_send{
+    background-color: white;
     width: 100%;
     padding: 0.5rem;
     border-radius: 50px;
