--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -43,12 +43,14 @@
                 </div>
                     <h2 class="px-3">Courses</h2>
                 <div class="container courses_container">
-                    <div class="row justify-content-center">
-                        <div class="col-md-4 col-12 p-4 text-center">
-                            <a href="/course.html"><div>
-                                <h3>course</h3>
-                            </div></a>
-                        </div>
+                    <div class="row justify-content-center" id="course_row">
+                        <!-- <div class="col-md-4 col-12 p-4 text-center">
+                            <a href="/course.html">
+                                <div>
+                                    <h3>course</h3>
+                                </div>
+                            </a>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -56,30 +58,25 @@
     </div>
     <!-- bootstrap script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <!-- <script>
+    <script>
         
         window.onload=function() {
-        const eform = document.querySelector('form');
-        eform.addEventListener('submit', event =>{
             event.preventDefault();
 
-            const formData = new FormData(eform);
-            const data = Object.fromEntries(formData);
-
-            fetch('http://localhost:3000/api/v1/auth/login', {
-                method: 'POST',
+            fetch('http://localhost:3000/courses/fetchcourses', {
+                method: 'GET',
                 credentials: "include",
                 headers: {
                     'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(data)
-
+                }
             }).then(res => res.json())
-            .then(data => console.log(data))
+            .then(data => {
+                for (const element of data) {
+                    document.getElementById('course_row').innerHTML += '<div class="col-md-4 col-12 p-4 text-center"> <a href="/courses/course/'+ element._id +'"> <div> <h3>'+ element.name +'</h3></div></a></div>';
+                }}
+            )
             .catch(error => console.log(error));
-
-        })
-    }
-    </script> -->
+        }
+    </script>
 </body>
 </html>
