--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -66,7 +66,7 @@
         e.preventDefault()
         display.textContent = ''
         try {
-          const res = await fetch('/api/v1/auth/signup', {
+          const res = await fetch('/signup', {
             method: 'POST',
             body: JSON.stringify({ name: username.value, email: email.value, password: password.value, birthDate: birthd }),
             headers: { 'Content-Type': 'application/json' }
