--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -13,18 +13,35 @@
                         </div>
                         <div class="col-md-4 col-12 p-4">
                             <div class="row mx-auto" id="user_name">
+                                <svg id="alert-icon" width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M19 13.1466V12.9395V11.5H18.5V13.2499C18.5 13.2499 18.5 13.25 18.5 13.25C18.5 13.3163 18.5264 13.3798 18.5732 13.4266L18.5733 13.4267L20.6036 15.4569L20.75 15.6034V15.8105V17V17.5H20.25H3.75H3.25V17V15.8105V15.6034L3.39645 15.4569L5.4267 13.4267L5.42675 13.4266C5.47361 13.3798 5.49996 13.3163 5.5 13.25C5.5 13.25 5.5 13.2499 5.5 13.2499V10.2505V10.25H6C5.99791 9.1961 6.27398 8.1603 6.80032 7.24724C7.32665 6.33417 8.08463 5.57618 8.99767 5.0498C9.91072 4.52343 10.9465 4.24733 12.0004 4.24938C12.8658 4.25107 13.7183 4.44028 14.5 4.80133L19 13.1466ZM19 13.1466L19.1464 13.2931L21.1767 15.3233L21.1768 15.3234C21.2236 15.3702 21.25 15.4337 21.25 15.5C21.25 15.5 21.25 15.5001 21.25 15.5001V17.75C21.25 17.8163 21.2237 17.8799 21.1768 17.9268C21.1299 17.9737 21.0663 18 21 18H15.75H15.25V18.5V19.25C15.25 20.112 14.9076 20.9386 14.2981 21.5481C13.6886 22.1576 12.862 22.5 12 22.5C11.138 22.5 10.3114 22.1576 9.7019 21.5481C9.09241 20.9386 8.75 20.112 8.75 19.25V18.5V18H8.25H3C2.9337 18 2.87011 17.9737 2.82322 17.9268C2.77634 17.8799 2.75 17.8163 2.75 17.75V15.5001C2.75 15.5001 2.75 15.5 2.75 15.5C2.75004 15.4337 2.77639 15.3702 2.82325 15.3234L2.8233 15.3233L4.85355 13.2931L5 13.1466V12.9395V10.2503C5.00226 8.5155 5.64763 6.84319 6.81134 5.55664C7.97513 4.27001 9.57466 3.4606 11.3006 3.28493L11.75 3.23919V2.7875V1.75M19 13.1466L11.75 1.75M11.75 1.75H12.25V2.78825V3.23974L12.6991 3.28566C13.3166 3.34879 13.9223 3.49463 14.5 3.71888V4.25502C13.7113 3.92399 12.8623 3.75106 12.0014 3.74939L11.75 1.75ZM9.75 18H9.25V18.5V19.25C9.25 19.9793 9.53973 20.6788 10.0555 21.1945C10.5712 21.7103 11.2707 22 12 22C12.7293 22 13.4288 21.7103 13.9445 21.1945C14.4603 20.6788 14.75 19.9793 14.75 19.25V18.5V18H14.25H9.75Z" fill="url(#paint0_linear_814_5)" stroke="white"/>
+                                    <path d="M22 6.5C22 7.88071 20.8807 9 19.5 9C18.1193 9 17 7.88071 17 6.5C17 5.11929 18.1193 4 19.5 4C20.8807 4 22 5.11929 22 6.5Z" fill="white" stroke="white"/>
+                                    <defs>
+                                    <linearGradient id="paint0_linear_814_5" x1="12" y1="1.25" x2="12" y2="23" gradientUnits="userSpaceOnUse">
+                                    <stop stop-color="#6B6A76"/>
+                                    <stop offset="1" stop-color="#4E4B5C"/>
+                                    </linearGradient>
+                                    </defs>
+                                    </svg>
+                                    
+                               <img id="user_img" src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png">
+                               <h5 style="align-self: center;position: absolute;">User Name</h5>
 
                             </div>
                             <div class="row mt-3 mx-auto" id="user_lvl">
-
+                                <h5 style="align-self: center;">Your Level</h5>
+                                <img id="user_lvl_img" src="https://cdn-icons-png.flaticon.com/512/179/179249.png">
                             </div>
                         </div>
                         <div class="col-md-4 col-12 p-4">
-                            <div class="row" id="community">
-                                
+                            <div class="row mx-auto" id="community">
+                                <img id="community-svg"  src="https://cdn-icons-png.flaticon.com/512/921/921360.png">
+                                    <h5>Community</h5>
+                                    <p>Ask And Learn With Our Community</p>
                             </div>
-                            <div class="row mt-3" id="recent_course">
-
+                            <div class="row mt-3 mx-auto" id="recent_course">
+                                <h5>Recently Cource</h5>
+                                <h3 id="recent_course-h3">Continue</h3>
                             </div>
                         </div>
                     </div>
@@ -32,6 +49,10 @@
                         <div class="col-md-4 col-12 p-4 ">
                             <div id="bonus">
                                 <h3>Bonus</h3>
+                                <img id="coin-img" src="../assets/coin.png">
+                                <h3>1475</h3>
+                                <p>02% Increase From Target</p>
+                                </div>
                             </div>
                         </div>
                         <div class="col-md-8 col-12 p-4">
