--- a/views/header.ejs
+++ b/views/header.ejs
@@ -9,5 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <!-- custom Style css -->
     <link rel="stylesheet" type="text/css" href="/css/style.css">
+        <!-- jQuery script -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <title>FODIX | <%= title %></title>
 </head>
