--- a/views/lesson/video.ejs
+++ b/views/lesson/video.ejs
@@ -1,8 +1,26 @@
 <div class="row mt-3">
     <h5><%= information.data %></h5>
     <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
+        <div class="progress" style="margin-bottom: 10px; width: 90%;margin-left: 5%;">
+            <div class="progress-bar" role="progressbar" style="width: 25%; background-color: cornflowerblue;opacity: 0.7;" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
+          </div> 
     <div id="player" class="youtube-video" ></div>
-    <input id="YouTube-player-progress" type="range" value="0" min="0" max="100" onchange="youTubePlayerCurrentTimeChange(this.value);" oninput="youTubePlayerCurrentTimeSlide();">
+
+    <input id="YouTube-player-progress" type="range" value="0" min="0" max="100" onchange="youTubePlayerCurrentTimeChange(this.value);" oninput="youTubePlayerCurrentTimeSlide();" style="width: 80%;margin-left: 10%;">
+   
+    <!-- Edited-->
+    <div  style="background-color: #5A0FC8; color: white; height: 4%;width: 15%;position: absolute; top: 45%;  right: 5%">
+        <h6 style="margin: 2px;" >Click arrow to continue</h5>
+    </div>
+
+    <div style="position: absolute; top: 50%; width: 20%;height: 20%; right:-8%;">
+        <i class="bi bi-arrow-right-circle" style="font-size: 1.7rem;"></i>
+    </div>
+
+    <div class="btn-div row mt-3 mx-auto">
+    <button id="btn-previous">Previous</button>
+    <button id="btn-next">Previous</button>
+    </div>
 
     <script>
     // 2. This code loads the IFrame Player API code asynchronously.
